--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.3.3",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
+    "json-bigint": "^1.0.0",
+    "lodash": "^4.17.21",
     "vant": "^2.12.54",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
